# Game_with_SDL2

./: .gitignore  README.md
assignment/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
assignment/assignment/: Makefile  drag_n_drop  fruit.h  main.cc  tree.h
assignment/box2d/: Makefile  cmake_install.cmake
assignment/box2d/src/: Makefile  cmake_install.cmake
assignment/box2d/testbed/: Makefile  cmake_install.cmake
assignment/box2d/unit-test/: Makefile  cmake_install.cmake
assignment/game_event/: Makefile  cmake_install.cmake
assignment/game_event/include/: game_event.h  game_touch_event_data.h  game_touch_event_impl.h
assignment/game_event/src/: CMakeLists.txt  Makefile  cmake_install.cmake  game_touch_event_impl.cc
assignment/include/: SDL_game_object.h  animation.h  animation_manage.h  application_manage.h  background.h  basket.h  bird.h  box2d_facade.h  fruit.h  game_bubble.h  game_constant.h  game_contact_listener.h  game_container_object.h  game_debug.h  game_enum.h  game_font_manage.h  game_macros.h  game_manage.h  game_object.h  game_object_factory.h  game_object_phys.h  game_physic_object.h  game_speech.h  game_state_machine.h  kids.h  loader_params.h  log_wrapper.h  road_sign.h  texture_manager.h  texture_rotation.h  texture_wrapper.h  tree.h  vector_2d.h
assignment/include/logger/: Logger.h
assignment/include/logger/implementation/: Logger.impl.h  LoggerParameters.h
assignment/src/: CMakeLists.txt  Makefile  SDL_game_object.cc  animation.cc  animation_manage.cc  bird.cc  box2d_facade.cc  cmake_install.cmake  fruit.cc  fruit_picking  game_bubble.cc  game_contact_listener.cc  game_container_object.cc  game_debug.cc  game_font_manage.cc  game_manage.cc  game_object_factory.cc  game_speech.cc  kids.cc  loader_params.cc  main.cc  settings.ini  texture_manager.cc  texture_wrapper.cc  tree.cc
excercise/alpha_blending/: Makefile  alpha_blending.cc
excercise/animate_sprite/: Makefile  animate_sprite.cc
excercise/clip_rendering/: Makefile  clip_rendering.cc
excercise/color_keying/: Makefile  color_keying.cc
excercise/color_modulation/: Makefile  color_modulation.cc
excercise/font_loading/: Makefile  font_loading.cc
excercise/geometry_rendering/: Makefile  geometry_rendering.cc
excercise/hello_world/: Makefile  hello_world.cc
excercise/include/: application_manage.h  base_button.h  texture_wrapper.h
excercise/key_presses/: Makefile  key_event.cc
excercise/key_state/: Makefile  main.cc
excercise/mouse_event/: Makefile  mouse_event.cc
excercise/rotation_flipping/: Makefile  rotation_flipping.cc
excercise/texture_loading/: Makefile  texture_loading.cc
